# c_libraries

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  code_standard.md  f1.txt  f2.txt  include_paths.txt
basic_data_manipulation/includes/: array_funcs.h  basic_stats.h  comp_funcs.h  hash_funcs.h  swap_funcs.h
basic_data_manipulation/srcs/: array_funcs.c  basic_stats.c  comp_funcs.c  hash_funcs.c
custom_io/includes/: get_file.h  get_terminal_input.h
custom_io/srcs/: get_file.c  get_terminal_input.c
data_structure/includes/: bin_tree.h  chained_hashtable.h  doubly_linked_list.h  graph.h  key-value_linked_list.h  linked_list.h  linked_list_graph.h  linked_list_queue.h  robinhood_hashtable.h  tree_linked_list.h
data_structure/srcs/: bin_tree.c  chained_hashtable.c  doubly_linked_list.c  graph.c  key-value_linked_list.c  linked_list.c  linked_list_graph.c  linked_list_queue.c  robinhood_hashtable.c  tree_linked_list.c
general_purpose/includes/: date.h
general_purpose/srcs/: date.c
generics/includes/: result_struct.h  universal_array.h  universal_array_io.h
generics/srcs/: universal_array_io.c
includes/basic_data_manipulation/: array_funcs.h  basic_stats.h  comp_funcs.h  hash_funcs.h  string_funcs.h  swap_funcs.h
includes/basic_data_manipulation/srcs/: array_funcs.c  basic_stats.c  comp_funcs.c  hash_funcs.c  string_funcs.c  swap_funcs.c
includes/custom_io/: check_input.h  get_file.h  get_terminal_input.h
includes/custom_io/srcs/: check_input.c  get_file.c  get_terminal_input.c
includes/data_structure/: bin_tree.h  chained_hashtable.h  doubly_linked_list.h  key-value_linked_list.h  linked_list.h  linked_list_graph.h  linked_list_queue.h  robinhood_hashtable.h  tree_linked_list.h
includes/data_structure/srcs/: bin_tree.c  chained_hashtable.c  doubly_linked_list.c  key-value_linked_list.c  linked_list.c  linked_list_graph.c  linked_list_queue.c  robinhood_hashtable.c  tree_linked_list.c
includes/general_purpose/: date.h
lib_srcs/basic_data_structures/: CMakeLists.txt
lib_srcs/basic_utils/: CMakeLists.txt
lib_srcs/basic_utils/includes/: array_funcs.h  basic_stats.h  comp_funcs.h  hash_funcs.h  swap_funcs.h
lib_srcs/basic_utils/srcs/: array_funcs.c  basic_stats.c  comp_funcs.c  hash_funcs.c  swap_funcs.c
lib_srcs/data_structures/: CMakeLists.txt  Makefile
lib_srcs/data_structures/basic/: CMakeLists.txt
lib_srcs/data_structures/basic/includes/: grid.h  pointer_array.h  universal_array.h  universal_array_io.h  universal_pointer.h
lib_srcs/data_structures/basic/srcs/: grid.c  pointer_array.c  universal_array.c  universal_array_io.c
lib_srcs/data_structures/graph/: CMakeLists.txt
lib_srcs/data_structures/graph/includes/: digraph.h  linked_list_digraph.h
lib_srcs/data_structures/graph/srcs/: digraph.c  linked_list_digraph.c
lib_srcs/data_structures/hashtables/: CMakeLists.txt
lib_srcs/data_structures/hashtables/includes/: chained_hashtable.h  robinhood_hashtable.h
lib_srcs/data_structures/hashtables/srcs/: chained_hashtable.c  robinhood_hashtable.c
lib_srcs/data_structures/includes/: bin_tree.h  binary_tree.h  chained_hashtable.h  digraph.h  doubly_linked_list.h  graph.h  key-value_linked_list.h  linked_list.h  linked_list_digraph.h  linked_list_graph.h  linked_list_kvp.h  linked_list_queue.h  linked_list_stack.h  robinhood_hashtable.h  tree_linked_list.h
lib_srcs/data_structures/lists/: CMakeLists.txt
lib_srcs/data_structures/lists/includes/: _extend_doubly_linked_list.h  doubly_linked_list.h  linked_list.h  linked_list_kvp.h  linked_list_queue.h  linked_list_stack.h
lib_srcs/data_structures/lists/srcs/: doubly_linked_list.c  linked_list.c  linked_list_kvp.c  linked_list_queue.c  linked_list_stack.c
lib_srcs/data_structures/srcs/: bin_tree.c  binary_tree.c  chained_hashtable.c  digraph.c  doubly_linked_list.c  graph.c  key-value_linked_list.c  linked_list.c  linked_list_digraph.c  linked_list_graph.c  linked_list_kvp.c  linked_list_queue.c  linked_list_stack.c  robinhood_hashtable.c  tree_linked_list.c
lib_srcs/data_structures/trees/: CMakeLists.txt
lib_srcs/data_structures/trees/includes/: binary_tree.h  tree_linked_list.h
lib_srcs/data_structures/trees/srcs/: binary_tree.c  tree_linked_list.c
lib_srcs/generics/: CMakeLists.txt
lib_srcs/miscs/: CMakeLists.txt
lib_srcs/stream_utils/: CMakeLists.txt
lib_srcs/stream_utils/includes/: get_file.h  get_terminal_input.h
lib_srcs/stream_utils/srcs/: get_file.c  get_terminal_input.c
lib_srcs/string_utils/: CMakeLists.txt
lib_srcs/string_utils/includes/: check_string.h  string_block.h  string_funcs.h
lib_srcs/string_utils/srcs/: check_string.c  string_funcs.c
lib_srcs/string_utils/tests/: test_check_string.c  test_string_funcs.c
more_strings/includes/: check_string.h  string_block.h  string_funcs.h
more_strings/srcs/: check_string.c  string_funcs.c
(+17 files in other folders)
